aws-migration/le-migration/08-harbor/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  labels:
    app: harbor
    project: linkedeye
    environment: prod
