aws-migration/le-migration/08-harbor/05-harbor-core.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harbor-core
  namespace: harbor
  labels:
    app: harbor-core
    project: linkedeye
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harbor-core
  template:
    metadata:
      labels:
        app: harbor-core
        project: linkedeye
    spec:
      containers:
        - name: harbor-core
          image: goharbor/harbor-core:v2.10.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /api/v2.0/ping
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /api/v2.0/ping
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: harbor-core-svc
  namespace: harbor
  labels:
    app: harbor-core
    project: linkedeye
spec:
  selector:
    app: harbor-core
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
